k8s/database-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdv-backend
  namespace: sachs
  labels:
    app: cdv-backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cdv-backend
    spec:
      containers:
        - name: cdv-backend
          image: registry.datexis.com/ksachs/cdv-backend:v1
          ports:
            - name: client-port
              containerPort: 5000
      restartPolicy: Always
      imagePullSecrets:
        - name: private-registry-auth
      priorityClassName: important
  selector:
    matchLabels:
      app: cdv-backend
