k8s/database-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-api-service
spec:
  ports:
    - port: 5000
  selector:
    app: database-api
