k8s/database-service/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: cdv-backend-ingress
  namespace: sachs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - cdv-backend.api.datexis.com
    secretName: cdv-backend-ingress-tls
  rules:
  - host: cdv-backend.api.datexis.com
    http:
      paths:
      - backend:
          serviceName: cdv-backend-service
          servicePort: 5000
